@@ -17,24 +17,22 @@ import org.elasticsearch.common.xcontent.ConstructingObjectParser;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.index.shard.ShardId;
-import org.elasticsearch.xpack.core.XPackPlugin;
+import org.elasticsearch.persistent.PersistentTaskParams;
 import org.elasticsearch.xpack.core.ccr.action.ImmutableFollowParameters;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
-public class ShardFollowTask extends ImmutableFollowParameters implements XPackPlugin.XPackPersistentTaskParams {
+public class ShardFollowTask extends ImmutableFollowParameters implements PersistentTaskParams {
 
     public static final String NAME = "xpack/ccr/shard_follow_task";
 
     // list of headers that will be stored when a job is created
     public static final Set<String> HEADER_FILTERS =
-        Collections.unmodifiableSet(new HashSet<>(Arrays.asList("es-security-runas-user", "_xpack_security_authentication")));
+            Set.of("es-security-runas-user", "_xpack_security_authentication");
 
     private static final ParseField REMOTE_CLUSTER_FIELD = new ParseField("remote_cluster");
     private static final ParseField FOLLOW_SHARD_INDEX_FIELD = new ParseField("follow_shard_index");
@@ -46,7 +44,7 @@ public class ShardFollowTask extends ImmutableFollowParameters implements XPackP
     private static final ParseField HEADERS = new ParseField("headers");
 
     @SuppressWarnings("unchecked")
-    private static ConstructingObjectParser<ShardFollowTask, Void> PARSER = new ConstructingObjectParser<>(NAME,
+    private static final ConstructingObjectParser<ShardFollowTask, Void> PARSER = new ConstructingObjectParser<>(NAME,
             (a) -> new ShardFollowTask((String) a[0],
                 new ShardId((String) a[1], (String) a[2], (int) a[3]), new ShardId((String) a[4], (String) a[5], (int) a[6]),
                 (Integer) a[7], (Integer) a[8], (Integer) a[9], (Integer) a[10], (ByteSizeValue) a[11], (ByteSizeValue) a[12],
@@ -94,8 +92,8 @@ public class ShardFollowTask extends ImmutableFollowParameters implements XPackP
 
     public static ShardFollowTask readFrom(StreamInput in) throws IOException {
         String remoteCluster = in.readString();
-        ShardId followShardId = ShardId.readShardId(in);
-        ShardId leaderShardId = ShardId.readShardId(in);
+        ShardId followShardId = new ShardId(in);
+        ShardId leaderShardId = new ShardId(in);
         return new ShardFollowTask(remoteCluster, followShardId, leaderShardId, in);
     }
 
@@ -185,6 +183,6 @@ public class ShardFollowTask extends ImmutableFollowParameters implements XPackP
 
     @Override
     public Version getMinimalSupportedVersion() {
-        return Version.V_6_5_0;
+        return Version.CURRENT.minimumCompatibilityVersion();
     }
 }
